# sem7-compilers

./: GameOfLife.c  GameOfLife.h  main.c  simSFML.cc
task-demo/: Makefile  sim.h
task-frontend/: AST.cc  AST.h  CMakeLists.txt  Driver.cc  Driver.h  Grammar.yy  IO.c  Lexer.h  Lexer.ll  README.md
task-frontend/tests/: fact.mylang  fib-loop.mylang  fib-rec.mylang
